# sgb

./: .env.example  .gitignore  manage.py  pyproject.toml
clientes/: admin.py  forms.py  models.py  urls.py  views.py
clientes/migrations/: 0001_initial.py  0002_cliente_numero_liquidacion_alter_cliente_email.py
clientes/templates/clientes/: cliente_confirm_delete.html  cliente_detail.html  cliente_form.html  cliente_list.html  estado_cuenta.html
clientes/templatetags/: currency_filters.py
items/: admin.py  forms.py  models.py  urls.py  views.py
items/migrations/: 0001_initial.py
items/templates/items/: item_confirm_delete.html  item_detail.html  item_form.html  item_list.html
liquidaciones/: admin.py  forms.py  models.py  pdf_utils.py  tests.py  tests_frontend.py  urls.py  views.py
liquidaciones/migrations/: 0001_initial.py  0002_remove_pago_cliente_pago_numero_despacho_and_more.py  0003_pago_liquidacion_remove_pago_numero_despacho.py  0004_planillagastos_liquidacion_planilla_gastos_and_more.py  0005_liquidacion_orden_de_compra_liquidacion_proforma.py  0006_liquidacionitem_item_charfield.py  0007_liquidacion_factura_flete_seguro.py  0008_add_detalle_de_contenido.py  0009_rename_tipo_cambio_liquidacion_tipo_cambio_despacho_and_more.py  0010_moneda_model.py  0011_poblar_monedas_liquidacion.py  0012_moneda_fk_not_null.py
liquidaciones/templatetags/: number_filters.py
sgb/: asgi.py  settings.py  urls.py  views.py  wsgi.py
sgb/templates/: dashboard.html
tests/: test_autocomplete.py  test_frontend.py
(+24 files in other folders)
