[project]
name = "django-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=4.2,<5.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["clientes", "items", "liquidaciones", "sgb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "sgb.settings"
python_files = ["tests.py", "tests_*.py", "test_*.py"]
